--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
     "firebase": "^9.22.2",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-spring": "^9.7.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
