--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "firebase": "^9.22.2",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
